Pass user gesture flag when opening a new tab on Android.

What was thought to be a bug related to rel=noopener turned out to be a bug
with opening new tabs after all (oops.) User gestures were not being passed
through via LoadURLParams on Android, which causes issues with launching apps
when necessary via links with target=_blank.

BUG=729187,728346

Review-Url: https://codereview.chromium.org/2942163003
Cr-Commit-Position: refs/heads/master@{#480124}

Former-commit-id: b0d04772edfcaf49e8bfc909f8ed1596e8d46184